--- a/views/about.hbs
+++ b/views/about.hbs
@@ -1,10 +1,27 @@
-{{> menu id="about"}}
+{{> welcomeMenu id="about"}}
 
-<section class="ui center aligned middle aligned segment">
-  <h3>
-    Playlist 4
-  </h3>
-  <p>
-    A Little Playlist Maker - Version 4
-  </p>
+<section class="ui inverted blue segment">
+    <section class="ui yellow center aligned segment">
+        <div class="ui two column grid basic middle aligned segment">
+
+            <div class="column">
+                <h3><i>"Sign up today to Homers Gym <br>No time to waste <br>Sign up today!!"</i></h3>
+                <img class="ui centered medium image" src="https://media4.giphy.com/media/3o7TKVUn7iM8FMEU24/giphy.gif">
+            </div>
+
+            <div class="column">
+                <h2 class="ui red header">
+                    HOMER'S GYM.
+                </h2>
+                <p>
+                    <i>HOMER'S GYM.<br>
+                        Main Street,<br>
+                        Springfield, USA.</i><br><br>
+                    <strong><i class="call icon"></i>phone:</strong> <em> 1500-600-601</em><br>
+                    <strong><i class="mail icon"></i>email:</strong> <em> homersgym@gmail.com</em><br>
+                    <strong><i class="world icon"></i>website:</strong><em> www.homersgym.com</em>
+                </p>
+            </div>
+        </div>
+    </section>
 </section>
