--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,7 @@
-{{> welcomemenu }}
+{{> welcomeMenu }}
 
 <section class="ui center aligned middle aligned segment">
-  <p> Sign up or Log in... </p>
+    <p> HOMERS GYM ..  Sign up or Log in... </p>
+
 </section>
+<img class="ui large circular centered image" src="https://hdwallpapers.cat/wallpaper/homer-s-gym-simpsons-funny-tv-people-actors-8389.jpg">
