--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <meta charset="utf-8">
     <title> {{title}} </title>
     <meta charset="UTF-8">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css" type="text/css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.js"></script>
-  </head>
-  <body>
-    <section class="ui container">
-      {{{body}}}
-    </section>
-  </body>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
+</head>
+
+<body style="background-image:url(https://cdn.glitch.com/af190eba-afe1-434b-bf41-46251ebf87f4%2Fmain.jpg?1499104527884)">
+
+<section class="ui container">
+    {{{body}}} <!-- If you don’t want Handlebars to escape a value-->
+</section>
+
+</body>
 </html>
