--- a/views/partials/memberMenu.hbs
+++ b/views/partials/memberMenu.hbs
@@ -1,21 +1,19 @@
-
 <nav class="ui menu">
     <header class="ui blue header item"> Homers Gym App</header>
     <div class="right menu">
-        <a id="memberGoals" class="item" href="/dashboard/membergoals">&emsp;Goals &emsp;&nbsp;<i class=" green bullseye trophy icon"></i></a>
+        <a id="memberGoals" class="item" href="/dashboard/membergoals">&emsp;Goals &emsp;<i class=" green bullseye trophy icon"></i></a>
         <div class="right menu">
             <div class="ui simple dropdown item">
                 &emsp;Menu&emsp;<i class="orange sidebar icon"></i>
                 <div class="menu">
-                    <a id="settings" class="item" href="/settings">&emsp;Update Profile&nbsp;&nbsp; </a>
-                    <a id="dashboard" class="item" href="/dashboard">&emsp;Dashboard&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;<i class="green home icon"></i></a>
-                    <a id="logout" class="item" href="/logout">&emsp;Logout&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;<i class="red sign out icon"></i></a>
+                    <a id="settings" class="item" href="/settings">&emsp;Update Profile</a>
+                    <a id="dashboard" class="item" href="/dashboard">&emsp;Dashboard&emsp;&emsp;<i class="green home icon"></i></a>
+                    <a id="logout" class="item" href="/logout">&emsp;Logout&emsp;&emsp;&emsp;&emsp;<i class="red sign out icon"></i></a>
                 </div>
             </div>
         </div>
     </div>
 </nav>
-
 
 <script>
     // Tells which menu is active
@@ -25,4 +23,4 @@
     $('.ui.menu')
             .sticky()
     ;
-</script>
+</script>script>
