--- a/views/partials/welcomemenu.hbs
+++ b/views/partials/welcomemenu.hbs
@@ -1,11 +1,27 @@
 <nav class="ui menu">
-  <header class="ui header item"> <a href="/"> Playlist 4 </a></header>
-  <div class="right menu">
-    <a id="signup" class="item" href="/signup"> Signup  </a>
-    <a id="login" class="item" href="/login">  Login   </a>
-  </div>
+    <header class="ui header item"> <a href="/">  NOW OPEN  </a></header>
+
+    <div class="right menu">
+        <div class="ui simple dropdown item">
+            &emsp;Menu&emsp;&emsp;<i class="blue sidebar icon"></i>
+            <div class="menu">
+                <a id="signup" class="item" href="/signup">&emsp;Sign Up&nbsp;<i class="blue write icon"></i></a>
+                <a id="login" class="item" href="/login">&emsp;Login&emsp;<i class="red sign in icon"></i></a>
+                <a id="about" class="item" href="/about">&emsp;About&emsp;<i class="yellow edit icon"></i></a>
+                <a id="dashboard" class="item" href="/dashboard">&emsp;Dashboard&emsp;<i class="yellow edit icon"></i></a>
+                <a id="index" class="item" href="/">&emsp;Home&emsp;<i class="green home icon"></i></a>
+            </div>
+        </div>
+    </div>
+
 </nav>
 
 <script>
-  $("#{{id}}").addClass("active item");
+    // Tells which menu is active
+    $("#{{id}}").addClass("active item");
+
+    // Allow top nav menu bar to stick and follow you down the page
+    $('.ui.menu')
+            .sticky()
+    ;
 </script>
