--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,12 +1,41 @@
-{{> welcomemenu id='login' }}
+{{> welcomeMenu id='login' }}
 
-<form class="ui stacked segment form" action="/authenticate" method="POST">
-  <h3 class="ui header">Log-in</h3>
-  <div class="field">
-    <label>Email</label> <input placeholder="Email" name="email">
-  </div>
-  <div class="field">
-    <label>Password</label> <input type="password"  name="password">
-  </div>
-  <button class="ui blue submit button">Login</button>
-</form>
+<section class = "ui inverted blue segment">
+    <section class = "ui yellow segment">
+        <div class="ui three column grid basic middle aligned segment">
+
+            <div class="column">
+                <form class="ui raised segment form" action="/authenticate" method="POST">
+
+                    <h1 class="ui red center aligned header">Log-in</h1>
+
+                    <div class="field">
+                        <label>Email</label>
+                        <div class="ui icon input">
+                            <input type="email" name="email">
+                            <i class="mail icon"></i>
+                        </div>
+                    </div>
+                    <div class="field">
+                        <label>Password</label>
+                        <div class="ui icon input">
+                            <input type="password" name="password">
+                            <i class="lock icon"></i>
+                        </div>
+                    </div>
+
+                    <button class="ui animated fade blue submit button">
+                        <div class="visible content"><i class="lock icon"></i>Enter</div>
+                        <div class="hidden content"><i class="unlock icon"></i>Click</div>
+                    </button>
+
+                </form>
+            </div>
+
+            <div class="column">
+                <img class="ui medium center aligned image" src="https://vignette.wikia.nocookie.net/simpsons/images/c/c5/Rainier_Wolfcastle.png/revision/latest/top-crop/width/360/height/450?cb=20131223202404.jpg">
+                <h3>Instructor Rainier Wolfcastle<i>
+            </div>
+        </div>
+    </section>
+</section>
