--- a/views/partials/trainerMenu.hbs
+++ b/views/partials/trainerMenu.hbs
@@ -1,12 +1,12 @@
 <nav class="ui menu">
-    <header class="ui red header item"> Goals >>>>>> Trainer Dashboard </header>
+    <header class="ui red header item"> >>>>>> Trainer Dashboard <<<<<< </header>
     <div class="right menu">
-        <a id="trainerGoals" class="item" href="/trainerDashboard/trainergoals">&emsp;Goals &emsp;&nbsp;<i class=" green bullseye trophy icon"></i></a>
+        <a id="trainerGoals" class="item" href="/trainerDashboard/trainergoals">&emsp;Goals &emsp;<i class=" green bullseye trophy icon"></i></a>
         <div class="ui simple dropdown item">
             &emsp;Menu&emsp;<i class="orange sidebar icon"></i>
             <div class="menu">
-                <a id="trainerDashboard" class="item" href="/trainerDashboard">&emsp;Dashboard&emsp;&nbsp;&nbsp;&nbsp;<i class="green home icon"></i></a>
-                <a id="logout" class="item" href="/logout">&emsp;Logout&emsp;&emsp;&emsp;&nbsp;&nbsp;&nbsp;<i class="red sign out icon"></i></a>
+                <a id="trainerDashboard" class="item" href="/trainerDashboard">&emsp;Dashboard&emsp;<i class="green home icon"></i></a>
+                <a id="logout" class="item" href="/logout">&emsp;Logout&emsp;&emsp;&emsp;<i class="red sign out icon"></i></a>
             </div>
 
         </div>
