--- a/views/partials/memberAddAssessment.hbs
+++ b/views/partials/memberAddAssessment.hbs
@@ -6,52 +6,47 @@
     <button class="ui blue submit button">Add Assessment</button>
 </form>
 
-
 <br>
 <div class="ui large red left ribbon label">
-    <i class="info circle icon"></i> All of your Assessment Details {{member.firstName}}&emsp; <i class="pointing down icon"></i>
+    <i class="info circle icon"></i> All of your Assessment Details {{member.firstname}}&emsp; <i class="pointing down icon"></i>
 </div>
 
 <section class="ui inverted blue center aligned segment">
     <section class="ui large inverted yellow segment">
-        <div class="ui accordion">
-            <div class="title">
-                Click Arrow to add more few Assessments
-                <i class="dropdown icon"></i>
-            </div>
-            <div class="content">
-                <form class="ui raised center aligned segment form" name="memberAddAssessment" action="/dashboard/memberaddassessment" method="POST">
-                    <div class="three fields">
-                        <div class="field">
-                            <label>Weight</label>
-                            <input placeholder="00.00kg" type="text" name="weight">
-                        </div>
-                        <div class="field">
-                            <label>Chest</label>
-                            <input placeholder="00.00cm" type="text" name="chest">
-                        </div>
-                        <div class="field">
-                            <label>Thigh</label>
-                            <input placeholder="00.00cm" type="text" name="thigh">
-                        </div>
+
+        <div class="content">
+            <form class="ui raised center aligned segment form" name="memberAddAssessment" action="/dashboard/memberaddassessment" method="POST">
+                <div class="three fields">
+                    <div class="field">
+                        <label>Weight</label>
+                        <input placeholder="00.00kg" type="text" name="weight">
                     </div>
-                    <div class="three fields">
-                        <div class="field">
-                            <label>Upper Arm</label>
-                            <input placeholder="00.00cm" type="text" name="upperarm">
-                        </div>
-                        <div class="field">
-                            <label>Waist</label>
-                            <input placeholder="00.00cm" type="text" name="waist">
-                        </div>
-                        <div class="field">
-                            <label>Hips</label>
-                            <input placeholder="00.00cm" type="text" name="hips">
-                        </div>
+                    <div class="field">
+                        <label>Chest</label>
+                        <input placeholder="00.00cm" type="text" name="chest">
                     </div>
-                    <button class="ui blue submit button"> Add Assessment </button>
-                </form>
-            </div>
+                    <div class="field">
+                        <label>Thigh</label>
+                        <input placeholder="00.00cm" type="text" name="thigh">
+                    </div>
+                </div>
+                <div class="three fields">
+                    <div class="field">
+                        <label>Upper Arm</label>
+                        <input placeholder="00.00cm" type="text" name="upperarm">
+                    </div>
+                    <div class="field">
+                        <label>Waist</label>
+                        <input placeholder="00.00cm" type="text" name="waist">
+                    </div>
+                    <div class="field">
+                        <label>Hips</label>
+                        <input placeholder="00.00cm" type="text" name="hips">
+                    </div>
+                </div>
+                <button class="ui blue submit button"> Add Assessment </button>
+            </form>
+
         </div>
     </section>
     <table class="ui fixed yellow center aligned celled table">
