--- a/views/partials/trainerEditGoal.hbs
+++ b/views/partials/trainerEditGoal.hbs
@@ -8,7 +8,7 @@
             <section class="ui yellow segment">
                 <table class="ui fixed left aligned table">
                     <tr>
-                        <td><i class="user icon"></i>Member:</td>
+                        <td><i class="user icon"></i>member:</td>
                         <td>{{goalToUpdate.memberfirstname}} {{goalToUpdate.memberlastname}}</td>
                     </tr>
                     <tr>
