--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -6,7 +6,7 @@
             <section class="ui green segment">
                 <table class="ui fixed left aligned table">
                     <h2 class="ui red center aligned header"> {{member.firstName}}'s Profile Details </h2>
-                    <td><i class="user icon"></i> Member:</td>
+                    <td><i class="user icon"></i> member:</td>
                     <td>{{member.firstName}} {{member.lastName}}</td>
                     </tr>
                     <tr>
