--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -8,7 +8,7 @@
                 <i class="close icon" onclick="hide()"></i>
                 <div class="header">
                     Hey there {{{member.firstName}}} you have not set any goals, click
-                    <a href="/dashboard/membergoals">here </a>to set one!
+                    <a href="/dashboard/memberGoals">here </a>to set one!
                 </div>
             </div>
         {{else}}
