--- a/views/partials/memberStats.hbs
+++ b/views/partials/memberStats.hbs
@@ -5,7 +5,7 @@
 <div class="ui center aligned four column grid">
     <div class="column">
         <div class="ui raised card">
-            <div class="ui small centered image"> "{{member.firstName}} {{member.lastName}}">
+            <div class="ui small centered image"> "{{member.firstname}} {{member.lastname}}"
         </div>
     </div>
 </div>
