--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -2,7 +2,7 @@
 <nav class="ui menu">
     <header class="ui blue header item"> Homers Gym App</header>
     <div class="right menu">
-        <a id="memberGoals" class="item" href="/dashboard/membergoals">&emsp;Goals &emsp;&nbsp;<i class=" green bullseye trophy icon"></i></a>
+        <a id="memberGoals" class="item" href="/dashboard/memberGoals">&emsp;Goals &emsp;&nbsp;<i class=" green bullseye trophy icon"></i></a>
         <div class="right menu">
             <div class="ui simple dropdown item">
                 &emsp;Menu&emsp;<i class="orange sidebar icon"></i>
