--- a/views/trainerViewAssessments.hbs
+++ b/views/trainerViewAssessments.hbs
@@ -2,7 +2,7 @@
 
 <section class="ui inverted yellow segment">
     <section class="ui raised segment">
-        <h2 class="ui blue center aligned header">{{member.firstName}} {{member.lastName}}'s Assessments List</h2>
+        <h2 class="ui blue center aligned header">{{member.firstname}} {{member.lastname}}'s Assessments List</h2>
 
         {{> memberStats }}
         {{> trainerAssessments }}
