--- a/views/memberGoals.hbs
+++ b/views/memberGoals.hbs
@@ -3,7 +3,7 @@
 <section class="ui inverted blue segment">
     <section class="ui inverted yellow segment">
         <div class="ui large green ribbon label">
-            <i class="bullseye icon"></i> All of your Set Target Goals {{member.firstName}}&emsp;<i class="pointing down icon"></i>
+            <i class="bullseye icon"></i> All of your Set Target Goals {{member.firstname}}&emsp;<i class="pointing down icon"></i>
         </div>
         <section class="ui yellow center aligned segment">
 
